# gibss-experiments

./: .gitignore  AGENTS.md  hello.py  pyproject.toml
gsea_examples/: README.md
gsea_examples/covid/: .gitignore  README.md  RUNNING.md  Snakefile  config.yaml  pyproject.toml
gsea_examples/lifan/: .gitignore  RUNNING.md  Snakefile  config.yaml  pyproject.toml
gsea_examples/lifan/scripts/: convert_rds.R  plot_sweep.py  prep.py  repro_logistic_divergence.py  threshold_sweep.py
gsea_examples/pbmc_purified/: .gitignore  README.md  RUNNING.md  Snakefile  config.yaml  pyproject.toml
gsea_examples/pbmc_purified/profile/: config.yaml
gsea_examples/pbmc_purified/scripts/: convert.R  fit_cell.py  prep.py  scoring.py
gsea_examples/pbmc_purified/tests/: test_scoring.py
logistic_susie_experiments/: .gitignore  README.md  Snakefile  core.py  generate_plots.py  logistic_susie_experiments.snk  manifest_cache.py  plot_ready.py  utils.py  viz_dims.py  viz_facet.py  viz_utils.py
logistic_susie_experiments/analyses/: __init__.py  _common.py  cs.py  hooks.py  pip.py  render.py
logistic_susie_experiments/experiments/: 000_global_local.yaml  000_impl_comparison.yaml  000_markov.yaml  001_profile_methods.yaml  002_global.yaml  002_irls.yaml  library.yaml  loader.py  predicates.py
logistic_susie_experiments/fits/: block_irls.py  globaljj_steps.py  irls_steps.py  linear_susie.py  logistic.py  score.py
logistic_susie_experiments/notebooks/: effect_size_calibration.py
logistic_susie_experiments/notes/: 2026-06-27-univariate-logbf-z-grid.md  2026-06-28-binary05-method-comparison.md
logistic_susie_experiments/reductions/: cs.py  pip.py
logistic_susie_experiments/run/: README.md  diag.sh  emit_targets.py  fit_array.sbatch  run_chunks.sh
logistic_susie_experiments/scripts/: plot_browser.py  report_binary05.py  symlink_plots.py  sync_plots.sh
logistic_susie_experiments/tests/: test_000_markov_config.py  test_effects_logbf.py  test_logbf_sizing.py  test_markov_designs.py  test_sweep_block.py  test_viz_dims.py  test_viz_facet.py
twogroup_experiments/: .gitignore  Snakefile  __init__.py  collection_utils.py  config.py  config_builders.py  config_registry.py  core.py  generate_plots.py  make_collections.py  manifest_cache.py  manifest_status.py  plot_ready.py  twogroup_experiments.snk  update_manifest.py  utils.py  viz2_metadata.py  viz3_utils.py  viz_utils.py
twogroup_experiments/analyses/: __init__.py  cs.py  f1.py  logbf.py  paired.py  pip.py
twogroup_experiments/analysis/: .gitignore  detectability_level_curves.qmd  feature_logbf_level_curves.qmd
twogroup_experiments/experiments/: 000_t_errors.yaml  001_n_samples.yaml  002_n_features.yaml  003_loc_snr.yaml  004_scale_snr.yaml  005_correlation.yaml  006_null_enrich_f1_estimation.yaml  007_null_intercept.yaml  008_oracle_em_updates.yaml  999_smoke.yaml  loader.py  (+4 more)
(+631 files in other folders)
