[project]
name = "gibss-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gibss-mono",
    "ipython>=9.13.0",
    "jax>=0.10.0",
    "marimo>=0.23.5",
    "matplotlib>=3.10.9",
    "nicegui>=3.13.0",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pypdfium2>=5.9.0",
    "snakemake>=9.20.0",
]

[tool.uv.sources]
gibss-mono = { git = "https://github.com/karltayeb/gibss-mono" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
